feature/add AppLink

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -10,4 +10,9 @@
     --font-line-l: 32px;
     --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main)
 
+
+    // Размеры
+
+    --nav-bar-height: 50px;
+
 }
