--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,10 @@
 .app.dark {
-    --bg-color: #0e0e75;
-    --primary-color: #049604;
-    --secondary-color: #04ff04;
+    --bg-color: #2e2e3d;
+    --inverted-bg-color: #f3e0e0;
+
+    --primary-color: #e8e8e8;
+    --secondary-color: #b9e1d7;
+
+    --inverted-primary-color: #2e2e2e;
+    --inverted-secondary-color: #001f61;
 }
