--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,5 +1,10 @@
 .app.light {
-    --bg-color: #e8e8ea;
-    --primary-color: #041c65;
-    --secondary-color: #0449e0;
+    --bg-color: #f3e0e0;
+    --inverted-bg-color: #2e2e3d;
+
+    --primary-color: #2e2e2e;
+    --secondary-color: #001f61;
+
+    --inverted-primary-color: #e8e8e8;
+    --inverted-secondary-color: #b9e1d7;
 }
